Added the makefile for the module_00

--- a/42/cpp_module_00/ex02/Makefile
+++ b/42/cpp_module_00/ex02/Makefile
@@ -1,1 +1,22 @@
-# Makefile
+NAME=account
+CC = c++
+FLAGS = -Wall -Wextra -Werror -std=c++98
+
+SRC = tests.cpp Account.cpp
+OBJ = $(SRC:.cpp=.o)
+
+all: $(NAME)
+
+$(NAME): $(OBJ)
+	$(CC) $(FLAGS) $(OBJ) -o $(NAME)
+
+%.o : %.cpp
+	$(CC) $(FLAGS) -o $@ -c $<
+
+clean:
+	rm -rf $(OBJ)
+
+fclean: clean
+	rm -rf $(NAME)
+
+re: clean all
