--- a/42/cpp_module_00/ex00/Makefile
+++ b/42/cpp_module_00/ex00/Makefile
@@ -1,1 +1,34 @@
-// This file will contain the code that will compile this exercise.
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: ochoumou <ochoumou@student.42.fr>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2022/10/10 14:49:34 by ochoumou          #+#    #+#              #
+#    Updated: 2022/10/10 14:50:29 by ochoumou         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
+NAME=megaphone
+CC = c++
+FLAGS = -Wall -Wextra -Werror -std=c++98
+
+SRC = megaphone.cpp
+OBJ = $(SRC:.cpp=.o)
+
+all: $(NAME)
+
+$(NAME): $(OBJ)
+	$(CC) $(FLAGS) $(OBJ) -o $(NAME)
+
+%.o : %.cpp
+	$(CC) $(FLAGS) -o $@ -c $<
+
+clean:
+	rm -rf $(OBJ)
+
+fclean: clean
+	rm -rf $(NAME)
+
+re: clean all
