--- a/42/cpp_module_00/ex01/Makefile
+++ b/42/cpp_module_00/ex01/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: ochoumou <ochoumou@student.42.fr>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2022/10/10 15:02:41 by ochoumou          #+#    #+#              #
+#    Updated: 2022/10/10 15:02:42 by ochoumou         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME=phonebook
 CC = c++
 FLAGS = -Wall -Wextra -Werror -std=c++98
