--- a/42/cpp_module_01/ex00/Makefile
+++ b/42/cpp_module_01/ex00/Makefile
@@ -1,7 +1,34 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: ochoumou <ochoumou@student.42.fr>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2022/10/22 13:14:58 by ochoumou          #+#    #+#              #
+#    Updated: 2022/10/22 13:32:35 by ochoumou         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME=zombie
 CC = c++
 FLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRC = main.cpp Zombie.cpp
+SRC = Zombie.cpp main.cpp
 OBJ = $(SRC:.cpp=.o)
 
+all: $(NAME)
+
+$(NAME): $(OBJ)
+	$(CC) $(FLAGS) $(OBJ) -o $(NAME)
+
+%.o : %.cpp
+	$(CC) $(FLAGS) -o $@ -c $<
+
+clean:
+	rm -rf $(OBJ)
+
+fclean: clean
+	rm -rf $(NAME)
+
+re: clean all
