--- a/42/cpp_module_01/ex01/Makefile
+++ b/42/cpp_module_01/ex01/Makefile
@@ -1,1 +1,34 @@
-# Here will be the makefile.
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: ochoumou <ochoumou@student.42.fr>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2022/10/22 13:18:48 by ochoumou          #+#    #+#              #
+#    Updated: 2022/10/22 13:18:49 by ochoumou         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
+NAME=zombieHorde
+CC = c++
+FLAGS = -Wall -Wextra -Werror -std=c++98
+
+SRC = main.cpp Zombie.cpp zombieHorde.cpp
+OBJ = $(SRC:.cpp=.o)
+
+all: $(NAME)
+
+$(NAME): $(OBJ)
+	$(CC) $(FLAGS) $(OBJ) -o $(NAME)
+
+%.o : %.cpp
+	$(CC) $(FLAGS) -o $@ -c $<
+
+clean:
+	rm -rf $(OBJ)
+
+fclean: clean
+	rm -rf $(NAME)
+
+re: clean all
