--- a/42/cpp_module_03/ex01/Makefile
+++ b/42/cpp_module_03/ex01/Makefile
@@ -1,8 +1,8 @@
-NAME=ClapTrap
+NAME=ScavTrap
 CC = c++
 FLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRC = ClapTrap.cpp main.cpp
+SRC = ClapTrap.cpp main.cpp ScavTrap.cpp
 OBJ = $(SRC:.cpp=.o)
 
 all: $(NAME)
