--- a/42/cpp_module_01/ex04/Makefile
+++ b/42/cpp_module_01/ex04/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: ochoumou <ochoumou@student.42.fr>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2022/10/24 15:50:02 by ochoumou          #+#    #+#              #
+#    Updated: 2022/10/24 15:50:03 by ochoumou         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME=replace
 CC = c++
 FLAGS = -Wall -Wextra -Werror -std=c++98
