--- a/42/cpp_module_01/ex06/Makefile
+++ b/42/cpp_module_01/ex06/Makefile
@@ -6,7 +6,7 @@
 #    By: ochoumou <ochoumou@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/10/24 16:00:31 by ochoumou          #+#    #+#              #
-#    Updated: 2022/10/24 16:00:44 by ochoumou         ###   ########.fr        #
+#    Updated: 2022/10/25 11:21:39 by ochoumou         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,7 @@ NAME=Harl_filter
 CC = c++
 FLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRC = main.cpp
+SRC = main.cpp Harl.cpp
 OBJ = $(SRC:.cpp=.o)
 
 all: $(NAME)
