--- a/42/cpp_module_05/ex01/Makefile
+++ b/42/cpp_module_05/ex01/Makefile
@@ -1,8 +1,8 @@
-NAME=animal_abstract
+NAME=bureaucrat
 CC = c++
 FLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRC = main.cpp Animal.cpp Cat.cpp Dog.cpp Brain.cpp
+SRC = main.cpp Bureaucrat.cpp
 OBJ = $(SRC:.cpp=.o)
 
 all: $(NAME)
