Still tweaking cpp module 05 and setting up for module 06.

--- a/42/cpp_module_05/ex00/Makefile
+++ b/42/cpp_module_05/ex00/Makefile
@@ -2,6 +2,7 @@ NAME=bureaucrat
 CC = c++
 FLAGS = -Wall -Wextra -Werror -std=c++98
 
+HEADER = Bureaucrat.hpp
 SRC = main.cpp Bureaucrat.cpp
 OBJ = $(SRC:.cpp=.o)
 
@@ -10,7 +11,7 @@ all: $(NAME)
 $(NAME): $(OBJ)
 	$(CC) $(FLAGS) $(OBJ) -o $(NAME)
 
-%.o : %.cpp
+%.o : %.cpp $(HEADER)
 	$(CC) $(FLAGS) -o $@ -c $<
 
 clean:
