--- a/42/cpp_module_05/ex01/Makefile
+++ b/42/cpp_module_05/ex01/Makefile
@@ -1,8 +1,9 @@
-NAME=form
+NAME=form_up
 CC = c++
 FLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRC = main.cpp Bureaucrat.cpp
+HEADER = Bureaucrat.hpp Form.hpp
+SRC = main.cpp Bureaucrat.cpp Form.cpp
 OBJ = $(SRC:.cpp=.o)
 
 all: $(NAME)
@@ -10,7 +11,7 @@ all: $(NAME)
 $(NAME): $(OBJ)
 	$(CC) $(FLAGS) $(OBJ) -o $(NAME)
 
-%.o : %.cpp
+%.o : %.cpp $(HEADER)
 	$(CC) $(FLAGS) -o $@ -c $<
 
 clean:
