--- a/42/cpp_module_04/ex00/Makefile
+++ b/42/cpp_module_04/ex00/Makefile
@@ -1,8 +1,8 @@
-NAME=animal
+NAME=ex00
 CC = c++
 FLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRC = main.cpp Animal.cpp Cat.cpp Dog.cpp
+SRC = main.cpp Animal.cpp Cat.cpp Dog.cpp WrongAnimal.cpp WrongCat.cpp
 OBJ = $(SRC:.cpp=.o)
 
 all: $(NAME)
@@ -19,4 +19,4 @@ clean:
 fclean: clean
 	rm -rf $(NAME)
 
-re: clean all
+re: fclean all
