Finished exercise 01 and started setting up exercise 2.

--- a/42/cpp_module_07/ex02/Makefile
+++ b/42/cpp_module_07/ex02/Makefile
@@ -1,8 +1,8 @@
-NAME=whatever
+NAME=array
 CC = c++
 FLAGS = -Wall -Wextra -Werror -std=c++98
 
-HEADER = whatever.hpp
+HEADER = Array.hpp
 SRC = main.cpp
 OBJ = $(SRC:.cpp=.o)
 
