--- a/42/cpp_module_07/ex01/Makefile
+++ b/42/cpp_module_07/ex01/Makefile
@@ -1,8 +1,8 @@
-NAME=whatever
+NAME=iter
 CC = c++
 FLAGS = -Wall -Wextra -Werror -std=c++98
 
-HEADER = whatever.hpp
+HEADER = iter.hpp
 SRC = main.cpp
 OBJ = $(SRC:.cpp=.o)
 
