Working on cpp module 08.

--- a/42/.vscode/settings.json
+++ b/42/.vscode/settings.json
@@ -67,6 +67,8 @@
     "filesystem": "cpp",
     "*.tcc": "cpp",
     "clocale": "cpp",
-    "*.tpp": "cpp"
+    "*.tpp": "cpp",
+    "numeric": "cpp",
+    "list": "cpp"
   }
 }
