--- a/42/cpp_module_09/.vscode/settings.json
+++ b/42/cpp_module_09/.vscode/settings.json
@@ -42,6 +42,7 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp",
-        "chrono": "cpp"
+        "chrono": "cpp",
+        "ratio": "cpp"
     }
 }
