Fixed some bounding issue with the getExchangeRate function.

--- a/42/cpp_module_09/ex00/Makefile
+++ b/42/cpp_module_09/ex00/Makefile
@@ -1,6 +1,6 @@
 NAME=btc
 CC = c++
-FLAGS = -Wall -Wextra -Werror -std=c++98
+# FLAGS = -Wall -Wextra -Werror -std=c++98
 
 SRC = main.cpp BitcoinExchange.cpp
 OBJ = $(SRC:.cpp=.o)
